# task-local-extensions

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
src/: extensions.rs  lib.rs  task_local.rs
