[package]
name = "task-local-extensions"
version = "0.1.4"
authors = ["Conrad Ludgate <conrad.ludgate@truelayer.com>", "Rodrigo Gryzinski <rodrigo.gryzinski@truelayer.com>"]
edition = "2018"
description = "Task-local container for arbitrary data."
repository = "https://github.com/TrueLayer/task-local-extensions"
license = "MIT OR Apache-2.0"
keywords = ["extensions", "typemap"]

[dependencies]
pin-utils = "0.1.0"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
